Main Page 팀 선택 UI 추가/ resume에서 사용하는 js,css,image 경로 변경/ 팀 로고 경로 변경  #9

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
         <nav>
             <!-- 네비게이션 링크, url_for 함수로 동적 URL 생성 -->
             <div class="nav-left">
-                <a href="https://github.com/Kakao-X-Goorm-DEEP-DIVE-course/Jobboo" target="_blank">Team Jobboo</a>
+                <a href="https://github.com/Kakao-X-Goorm-DEEP-DIVE-course/Jobboo" target="_blank">Made by Team Jobboo</a>
             </div>
             <div class="nav-right">
                 <a href="https://deepdive.goorm.io/" target="_blank">Deep-dive</a>
