--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,19 @@
 
 {% block content %}
 <div class="main-content">
+    <!-- 팀 선택 섹션 추가 -->
+    <div class="team-selection">
+        <h3>팀 선택</h3>
+        <div class="team-buttons">
+            <button class="team-button">Jobboo</button>
+            <button class="team-button">2조</button>
+            <button class="team-button">4조</button>
+        </div>
+    </div>
     <div class="center-content">
         <!-- 변경: 이미지를 상단으로 이동하고 logo-container 클래스 추가 -->
         <div class="logo-container">
-            <img src="{{ url_for('static', path='/images/team_logo.png') }}" alt="JOBBOO Logo" class="logo-image">
+            <img src="{{ url_for('static', path='/images/team_logo/jobboo_logo.png') }}" alt="JOBBOO Logo" class="logo-image">
         </div>
         <!-- 메인 타이틀 -->
         <h1>JOBBOO</h1>
