경로 수정되어 기존 파일 삭제(minwoo.html,css,js) / 각 유저 images에 대한 경로 변경 및 index.html에 경로 변경 적용
 #11

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,7 +32,7 @@
         <h3>{{ member.name }}</h3>
         <!-- 팀원 이력서 페이지로 링크, 이미지 클릭 시 해당 페이지로 이동/ 신규 페이지 호출 -->
         <a href="{{ url_for('resume', member_name=member.name.lower()) }}" target="_blank">
-            <img src="{{ url_for('static', path='/images/member_photos/' + member.image) }}" alt="{{ member.name }}">
+            <img src="{{ url_for('static', path='/images/user_photos/' + member.image) }}" alt="{{ member.name }}">
         </a>
     </div>
     {% endfor %}
