ㅎㅎ.. github, velog 링크 변경

--- a/app/templates/resume/minwoo.html
+++ b/app/templates/resume/minwoo.html
@@ -55,8 +55,8 @@
                 <section class="links">
                     <h2 class="h4 border-bottom pb-2">Links</h2>
                     <ul class="list-unstyled">
-                        <li><a href="https://github.com/minwoo22" target="_blank" rel="noopener noreferrer" class="text-white">GitHub</a></li>
-                        <li><a href="https://velog.io/@minwoo/posts" target="_blank" rel="noopener noreferrer" class="text-white">블로그</a></li>
+                        <li><a href="https://github.com/Twoeyes22" target="_blank" rel="noopener noreferrer" class="text-white">GitHub</a></li>
+                        <li><a href="https://velog.io/@twoeyes/posts" target="_blank" rel="noopener noreferrer" class="text-white">블로그</a></li>
                     </ul>
                 </section>
             </aside>
