--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,9 @@
             <p>DevOps의 숙명 Jobboo !!!!</p>
         </div>
     </div>
+    <div class="user-create-button-container">
+        <a href="{{ url_for('create_user_page') }}" class="btn btn-primary">유저 생성</a>
+    </div>
 </div>
 
 <div class="team-members">
