--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,7 @@
 <div class="main-content">
     <!-- 팀 선택 섹션 추가 -->
     <div class="team-selection">
+        <a href="{{ url_for('create_team') }}" class="team-button">팀 생성</a>
         <h3>팀 선택</h3>
         <div class="team-buttons">
             <button class="team-button">Jobboo</button>
@@ -14,7 +15,8 @@
     <div class="center-content">
         <!-- 변경: 이미지를 상단으로 이동하고 logo-container 클래스 추가 -->
         <div class="logo-container">
-            <img src="{{ url_for('static', path='/images/team_logo/jobboo_logo.png') }}" alt="JOBBOO Logo" class="logo-image">
+            <img src="{{ url_for('static', path='/images/team_logo/jobboo_logo.png') }}" alt="JOBBOO Logo"
+                class="logo-image">
         </div>
         <!-- 메인 타이틀 -->
         <h1>JOBBOO</h1>
