팀 소개 라는 타이틀 제거
 #9

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
         <div class="team-intro">
             <p>{{ current_team.t_intro }}</p>
             <p>{{ current_team.t_descript }}</p>
-            <a href="{{ current_team.t_git }}" target="_blank">GitHub</a>
+            <a href="{{ current_team.t_git }}" target="_blank">GitHub Link👆</a>
         </div>
         {% else %}
         <h1>팀을 선택해주세요</h1>
