feat: 팀 삭제 기능 구현

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,6 @@
         {% block content %}{% endblock %}
     </main>
     <!-- JavaScript 파일 링크 -->
-    <script src="{{ url_for('static', path='js/main.js') }}"></script>
+    <script src="{{ url_for('static', path='js/main.js') }}?v=1.0.0"></script>
 </body>
 </html>
