--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -116,17 +116,47 @@ h1 {
 }
 
 .team-button {
-    width: 100%;
-    padding: 10px;
     background-color: #007bff;
     color: white;
     border: none;
+    padding: 10px 18px;
     cursor: pointer;
-    text-align: left;
+    border-radius: 5px;
+    font-size: 15px;
+    text-decoration: none;
 }
 
 .team-button:hover {
     background-color: #0056b3;
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); /* 반투명 배경 */
+}
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover, .close:focus {
+    color: black;
+    cursor: pointer;
 }
 
 .team-members {
@@ -211,4 +241,57 @@ h1 {
 .close:focus {
     color: black;
     text-decoration: none;
+}
+
+.buttons-container{
+    display: flex; /* Flexbox 사용 */
+    gap: 10px; /* 버튼 사이에 간격을 추가 */
+    justify-content: flex-start; /* 왼쪽 정렬 (기본값) */
+}
+
+.delete-button {
+
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px 18px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 15px;
+
+}
+
+.delete-button:hover {
+    background-color: #c0392b;
+}
+
+#deleteForm {
+    padding: 8px;
+}
+
+.delete-confirm {
+    background-color: #e74c3c; 
+    color: white;
+    margin-right: 10px;
+    transition: background-color 0.3s ease;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.delete-confirm:hover {
+    background-color: #c0392b; 
+}
+
+.delete-close {
+    background-color: #95a5a6; 
+    color: white;
+    transition: background-color 0.3s ease;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+.delete-close:hover {
+    background-color: #7f8c8d; /* 호버 시 더 진한 회색 */
 }
